Added motion profiling code and updated drive PIDs

--- a/Low-Rider-2018-Drive-Methods/.vscode/settings.json
+++ b/Low-Rider-2018-Drive-Methods/.vscode/settings.json
@@ -12,5 +12,8 @@
     ".project": true
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
-  "wpilib.autoStartRioLog": false
+  "wpilib.autoStartRioLog": false,
+  "files.associations": {
+    "vector": "cpp"
+  }
 }
